@@ -285,6 +285,34 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|map
+operator|.
+name|DataMap
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|EntityResolver
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|project
 operator|.
 name|Project
@@ -1127,9 +1155,7 @@ name|DataChannelDescriptor
 argument_list|>
 name|configurationTree
 init|=
-name|loader
-operator|.
-name|load
+name|loadProject
 argument_list|(
 name|resource
 argument_list|)
@@ -1151,6 +1177,72 @@ name|configurationTree
 operator|.
 name|getRootNode
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|configurationTree
+return|;
+block|}
+specifier|protected
+name|ConfigurationTree
+argument_list|<
+name|DataChannelDescriptor
+argument_list|>
+name|loadProject
+parameter_list|(
+name|Resource
+name|resource
+parameter_list|)
+block|{
+comment|// Load Model back from the update XML
+name|ConfigurationTree
+argument_list|<
+name|DataChannelDescriptor
+argument_list|>
+name|configurationTree
+init|=
+name|loader
+operator|.
+name|load
+argument_list|(
+name|resource
+argument_list|)
+decl_stmt|;
+comment|// link all datamaps, or else we will lose cross-datamaps relationships
+name|EntityResolver
+name|resolver
+init|=
+operator|new
+name|EntityResolver
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|DataMap
+name|dataMap
+range|:
+name|configurationTree
+operator|.
+name|getRootNode
+argument_list|()
+operator|.
+name|getDataMaps
+argument_list|()
+control|)
+block|{
+name|resolver
+operator|.
+name|addDataMap
+argument_list|(
+name|dataMap
+argument_list|)
+expr_stmt|;
+name|dataMap
+operator|.
+name|setNamespace
+argument_list|(
+name|resolver
 argument_list|)
 expr_stmt|;
 block|}
